--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,14 @@ ignore=
 
 [isort]
 multi_line_output=5
+
+[tox]
+isolated_build = true
+skipsdist = true
+envlist = py38, py39
+
+[testenv]
+whitelist_externals = poetry
+commands =
+    poetry install -v
+    poetry run pytest
