--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -31,6 +31,7 @@ mypy = "^0.931"
 black = "^21.12b0"
 pytest-datadir = "^1.3.1"
 pre-commit = "^2.16.0"
+tox = "^3.24.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
