--- a/tox.ini
+++ b/tox.ini
@@ -22,7 +22,14 @@ multi_line_output=5
 [tox]
 isolated_build = true
 skipsdist = true
-envlist = py38, py39
+envlist = py37, py38, py39, py310, mypy
+
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310, mypy
 
 [testenv]
 whitelist_externals = poetry
