--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,10 +25,18 @@ jobs:
       run: |
         python -m pip install --upgrade pip
 
-    - name: Poetry image
+    - name: Install Poetry
       uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
 
-    - name: Test
-      run: poetry run pytest
+    - name: Install dependencies
+      run: |
+        pip install pytest wheel
+        poetry install
+        poetry export --format requirements.txt --output requirements.txt
+        pip install -r requirements.txt
+
+    - name: Run pytest
+      run: |
+        python -m pytest
