--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,3 +36,7 @@ jobs:
         poetry install
         poetry export --format requirements.txt --output requirements.txt
         pip install -r requirements.txt
+
+    - name: Run pytest
+      run: |
+        python -m pytest
