--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
-pytest = "^5.2"
+pytest = "7.0"
 mypy = "^0.931"
 black = "^21.12b0"
 pytest-datadir = "^1.3.1"
