--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
+Markdown = "^3.3.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
