--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 Markdown = "^3.3.6"
+rich = "^11.2.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
