--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
 python = "^3.7"
 Markdown = "^3.3.6"
 rich = "^11.2.0"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
