--- a/mypy.ini
+++ b/mypy.ini
@@ -5,3 +5,15 @@ ignore_missing_imports = True
 
 [mypy-requests.*]
 ignore_missing_imports = True
+
+[mypy-nox.*]
+ignore_missing_imports = True
+
+[mypy-pytest.*]
+ignore_missing_imports = True
+
+[mypy-_pytest.*]
+ignore_missing_imports = True
+
+[mypy-rich.*]
+ignore_missing_imports = True
