--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,15 @@ classifiers = [
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Topic :: Scientific/Engineering",
 ]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-Markdown = "^3.3.6"
 rich = "^11.2.0"
 requests = "^2.27.1"
+Markdown = "^3.3.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
@@ -35,6 +36,8 @@ black = "^21.12b0"
 pytest-datadir = "^1.3.1"
 pre-commit = "^2.16.0"
 tox = "^3.24.5"
+coverage = "^6.3.1"
+pytest-cov = "^3.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
@@ -42,3 +45,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 xfds = "xfds.core:main"
+
+[tool.coverage.paths]
+source = ["xfds"]
+
+[tool.coverage.report]
+show_missing = true
