updated fds output files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -153,12 +153,14 @@ cython_debug/
 
 # FDS Output Files
 **/data/**/*.binfo
+**/data/**/*.csv
 **/data/**/*.end
 **/data/**/*.out
+**/data/**/*.s3d*
 **/data/**/*.serr
 **/data/**/*.sinfo
 **/data/**/*.smv
 **/data/**/*.sout
-**/data/**/*.s3d*
-**/data/**/*.csv
+**/data/**/*.stderr
+**/data/**/*.stdout
 **/data/**/*.txt
