--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xfds"
-version = "0.1.0"
+version = "0.2.0"
 description = "FDS Runner using openbcl/fds-dockerfiles"
 license = "MIT"
 authors = ["Brian Cohan <briancohan@pbd.tools>"]
@@ -28,6 +28,7 @@ python = "^3.7"
 rich = "^11.2.0"
 requests = "^2.27.1"
 Markdown = "^3.3.6"
+typer = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
@@ -44,10 +45,10 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-xfds = "xfds.core:main"
+xfds = "xfds.cli:app"
 
 [tool.coverage.paths]
-source = ["xfds"]
+source = ["src/"]
 
 [tool.coverage.report]
 show_missing = true
