--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,8 +47,8 @@ build-backend = "poetry.core.masonry.api"
 [tool.poetry.scripts]
 xfds = "xfds.cli:app"
 
-[tool.coverage.paths]
-source = ["src/"]
+[tool.coverage.run]
+source = ["src"]
 
 [tool.coverage.report]
 show_missing = true
