--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,12 @@ pre-commit = "^2.16.0"
 tox = "^3.24.5"
 coverage = "^6.3.1"
 pytest-cov = "^3.0.0"
+flake8-black = "^0.2.4"
+flake8-bugbear = "^22.1.11"
+flake8-bandit = "^2.1.2"
+flake8-annotations = "^2.7.0"
+safety = "^1.10.3"
+codecov = "^2.1.12"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
