--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.7, 3.8, 3.9, '3.10']
+        python-version: ['3.10']
         poetry-version: [1.1.12]
       fail-fast: false
 
@@ -32,13 +32,6 @@ jobs:
       uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
-
-    - name: Install dependencies
-      run: |
-        pip install pytest wheel
-        poetry install
-        poetry export --format requirements.txt --output requirements.txt
-        pip install -r requirements.txt
 
     - name: Run tests
       run: nox
