--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "xfds"
-version = "0.1.0"
+version = "0.2.0"
 description = "FDS Runner using openbcl/fds-dockerfiles"
 license = "MIT"
 authors = ["Brian Cohan <briancohan@pbd.tools>"]
@@ -28,6 +28,7 @@ python = "^3.7"
 rich = "^11.2.0"
 requests = "^2.27.1"
 Markdown = "^3.3.6"
+typer = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
@@ -38,16 +39,23 @@ pre-commit = "^2.16.0"
 tox = "^3.24.5"
 coverage = "^6.3.1"
 pytest-cov = "^3.0.0"
+flake8-black = "^0.2.4"
+flake8-bugbear = "^22.1.11"
+flake8-bandit = "^2.1.2"
+flake8-annotations = "^2.7.0"
+safety = "^1.10.3"
+codecov = "^2.1.12"
+nox-poetry = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-xfds = "xfds.core:main"
+xfds = "xfds.cli:app"
 
-[tool.coverage.paths]
-source = ["xfds"]
+[tool.coverage.run]
+source = ["src"]
 
 [tool.coverage.report]
 show_missing = true
