--- a/mypy.ini
+++ b/mypy.ini
@@ -1,2 +1,8 @@
 [mypy]
 ignore_missing_imports = True
+
+[mypy-markdown.*]
+ignore_missing_imports = True
+
+[mypy-requests.*]
+ignore_missing_imports = True
