--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,11 +13,18 @@ jobs:
     - name: Checkout Repo
       uses: actions/checkout@v2
 
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: "3.10"
+
     - name: Install Nox
       uses: excitedleigh/setup-nox@v2.0.0
 
     - name: Install Poetry
       uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: 1.1.12
 
     - name: Run tests
-      run: nox
+      run: nox -s tests
