--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,34 +4,115 @@ on:
   - pull_request
 
 jobs:
-  test:
+
+
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: ['3.10']
         poetry-version: [1.1.12]
       fail-fast: false
-
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v2
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-
-    - name: Install Nox
-      uses: excitedleigh/setup-nox@v2.0.0
-
-    - name: Install Poetry
-      uses: abatilo/actions-poetry@v2.0.0
+    - uses: excitedleigh/setup-nox@v2.0.0
+    - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
+    - run: nox -s tests
 
-    - name: Run tests
-      run: nox
+
+  coverage:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10']
+        poetry-version: [1.1.12]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox@v2.0.0
+    - uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
+    - run: nox --sessions test coverage
+      env:
+        CODECOV_TOKEN: ${CODECOV_TOKEN}
+
+
+  black:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10']
+        poetry-version: [1.1.12]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox@v2.0.0
+    - uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
+    - run: nox -s black
+
+
+  lint:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10']
+        poetry-version: [1.1.12]
+      fail-fast: false
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox@v2.0.0
+    - uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
+    - run: nox -s lint
+
+
+  safety:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10']
+        poetry-version: [1.1.12]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox@v2.0.0
+    - uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
+    - run: nox -s safety
+
+
+  mypy:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.10']
+        poetry-version: [1.1.12]
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox@v2.0.0
+    - uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
+    - run: nox -s mypy
