--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ rich = "^11.2.0"
 requests = "^2.27.1"
 Markdown = "^3.3.6"
 typer = "^0.4.0"
+python-dotenv = "^0.19.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
@@ -46,6 +47,7 @@ flake8-annotations = "^2.7.0"
 safety = "^1.10.3"
 codecov = "^2.1.12"
 nox-poetry = "^0.9.0"
+python-slugify = "^6.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
