--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ requests = "^2.27.1"
 Markdown = "^3.3.6"
 typer = "^0.4.0"
 python-dotenv = "^0.19.2"
+tabulate = "^0.8.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "7.0"
