--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -36,7 +37,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -56,7 +58,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -75,7 +78,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -93,7 +97,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -111,7 +116,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
