--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,11 +30,11 @@ typer = "^0.4.0"
 
 
 [tool.poetry.dev-dependencies]
-black = "^21.12b0"
+black = "^22.3.0"
 codecov = "^2.1.12"
 coverage = "^6.3.1"
 flake8-annotations = "^2.7.0"
-flake8-bandit = "^2.1.2"
+flake8-bandit = "^3.0.0"
 flake8-bugbear = "^22.1.11"
 mypy = "^0.931"
 pre-commit = "^2.16.0"
