--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox
     # - uses: excitedleigh/setup-nox@v2.0.0
-    - run: pip install --user --upgrade nox
+    # - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -37,8 +38,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox
     # - uses: excitedleigh/setup-nox@v2.0.0
-    - run: pip install --user --upgrade nox
+    # - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -58,8 +60,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox
     # - uses: excitedleigh/setup-nox@v2.0.0
-    - run: pip install --user --upgrade nox
+    # - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -78,8 +81,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox
     # - uses: excitedleigh/setup-nox@v2.0.0
-    - run: pip install --user --upgrade nox
+    # - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -97,8 +101,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox
     # - uses: excitedleigh/setup-nox@v2.0.0
-    - run: pip install --user --upgrade nox
+    # - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -116,8 +121,9 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: excitedleigh/setup-nox
     # - uses: excitedleigh/setup-nox@v2.0.0
-    - run: pip install --user --upgrade nox
+    # - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
