--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,21 @@ jobs:
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
+    # - uses: actions/setup-python@v2
+    #   with:
+    #     python-version: ${{ matrix.python-version }}
     - uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.7'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
     # - uses: excitedleigh/setup-nox@v2.0.0
     - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
