--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.7"
 Markdown = "^3.3.6"
-typer = "0.4.0"
+typer = "^0.4.0"
 
 
 [tool.poetry.dev-dependencies]
