--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,23 @@ jobs:
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
+    # - uses: actions/setup-python@v2
+    #   with:
+    #     python-version: ${{ matrix.python-version }}
     - uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+        python-version: '3.7'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -36,7 +49,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -56,7 +70,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -72,10 +87,23 @@ jobs:
       fail-fast: false
     steps:
     - uses: actions/checkout@v2
+    # - uses: actions/setup-python@v2
+    #   with:
+    #     python-version: ${{ matrix.python-version }}
     - uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+        python-version: '3.7'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -93,7 +121,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
@@ -111,7 +140,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: excitedleigh/setup-nox@v2.0.0
+    # - uses: excitedleigh/setup-nox@v2.0.0
+    - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
         poetry-version: ${{ matrix.poetry-version }}
