--- a/mypy.ini
+++ b/mypy.ini
@@ -1,14 +1,8 @@
 [mypy]
 ignore_missing_imports = True
 
+[mypy-freezegun.*]
+ignore_missing_imports = True
+
 [mypy-markdown.*]
-ignore_missing_imports = True
-
-[mypy-requests.*]
-ignore_missing_imports = True
-
-[mypy-slugify.*]
-ignore_missing_imports = True
-
-[mypy-tabulate.*]
 ignore_missing_imports = True
