--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,9 @@ pytest = "7.0"
 pytest-cov = "^3.0.0"
 safety = "^1.10.3"
 setuptools = "^62.1.0"
+mkdocs = "^1.3.0"
+mkdocs-material = "^8.3.6"
+mdx-include = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
