--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+.python-version
+
 # FDS Output Files
 **/data/**/*.binfo
 **/data/**/*.csv
