--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,16 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.1.0
+    rev: v4.3.0
     hooks:
       - id: check-toml
       - id: check-yaml
+        args: [--unsafe]
       - id: end-of-file-fixer
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
 
   - repo: https://github.com/ambv/black
-    rev: 21.12b0
+    rev: 22.3.0
     hooks:
     - id: black
 
@@ -29,11 +30,10 @@ repos:
       - id: flake8
         additional_dependencies:
           - flake8-annotations~=2.0
-          - flake8-bandit~=2.1
           - flake8-docstrings~=1.5
           - flake8-isort~=4.0
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v0.930'
+    rev: 'v0.961'
     hooks:
     -   id: mypy
