--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ classifiers = [
 python = "^3.7"
 Markdown = "^3.3.6"
 typer = "^0.4.0"
+Jinja2 = "^3.1.1"
+PyYAML = "^6.0"
+toml = "^0.10.2"
 
 
 [tool.poetry.dev-dependencies]
@@ -34,7 +37,6 @@ black = "^22.3.0"
 codecov = "^2.1.12"
 coverage = "^6.3.1"
 flake8-annotations = "^2.7.0"
-flake8-bandit = "^3.0.0"
 flake8-bugbear = "^22.1.11"
 freezegun = "^1.2.1"
 mypy = "^0.931"
@@ -43,6 +45,9 @@ pytest = "7.0"
 pytest-cov = "^3.0.0"
 safety = "^1.10.3"
 setuptools = "^62.1.0"
+mkdocs = "^1.3.0"
+mkdocs-material = "^8.3.6"
+mdx-include = "^1.4.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
