--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
     "recommendations": [
           "bungcip.better-toml",
+          "ms-python.python",
+          "ms-python.vscode-pylance",
+          "PKief.material-icon-theme",
+          "tcwalther.cython",
     ]
 }
