--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,8 @@ markdown_extensions:
       alternate_style: true
   - mdx_include:
       base_path: examples
+  - pymdownx.arithmatex:
+      generic: true
 
 extra:
   social:
@@ -67,6 +69,9 @@ extra_css:
 extra_javascript:
   - js/termynal.js
   - js/custom.js
+  - js/mathjax.js
+  - https://polyfill.io/v3/polyfill.min.js?features=es6
+  - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
 watch:
 - examples
