change file to files in config
This will allow the user to create a list of files to include in the output directories. This is useful when the user wants to have pbs scripts, ini files, or other items included in each folder.

--- a/examples/bounds_closed/pbd.yml
+++ b/examples/bounds_closed/pbd.yml
@@ -1,4 +1,5 @@
 xfds:
   render:
-    - file: bounds_closed.fds
-      name: bounds_closed
+    - name: bounds_closed
+      files:
+        - bounds_closed.fds
