--- a/tests/test_render/user_filters/pbd.yml
+++ b/tests/test_render/user_filters/pbd.yml
@@ -1,6 +1,7 @@
 xfds:
   render:
-    - file: model.fds
-      name: model
+    - name: model
+      files:
+        - model.fds
       variables:
-        name: PBD Tools
+        greet: PBD Tools
