--- a/examples/filters/pbd.yml
+++ b/examples/filters/pbd.yml
@@ -1,42 +1,62 @@
 xfds:
   render:
-    - file: abs.fds
-      name: abs
-    - file: arange.fds
-      name: arange
-    - file: center.fds
-      name: center
-    - file: convert.fds
-      name: convert
-    - file: dxb.fds
-      name: dxb
-    - file: exhaust.fds
-      name: exhaust
-    - file: float.fds
-      name: float
-    - file: ijk.fds
-      name: ijk
-    - file: int.fds
-      name: int
-    - file: ior.fds
-      name: ior
-    - file: linspace.fds
-      name: linspace
-    - file: max.fds
-      name: max
-    - file: min.fds
-      name: min
-    - file: round.fds
-      name: round
-    - file: t2.fds
-      name: t2
-    - file: trim.fds
-      name: trim
-    - file: unique.fds
-      name: unique
-    - file: upper.fds
-      name: upper
-    - file: xb.fds
-      name: xb
-    - file: xyz.fds
-      name: xyz
+    - name: abs
+      files:
+        - abs.fds
+    - name: arange
+      files:
+        - arange.fds
+    - name: center
+      files:
+        - center.fds
+    - name: convert
+      files:
+        - convert.fds
+    - name: dxb
+      files:
+        - dxb.fds
+    - name: exhaust
+      files:
+        - exhaust.fds
+    - name: float
+      files:
+        - float.fds
+    - name: ijk
+      files:
+        - ijk.fds
+    - name: int
+      files:
+        - int.fds
+    - name: ior
+      files:
+        - ior.fds
+    - name: linspace
+      files:
+        - linspace.fds
+    - name: max
+      files:
+        - max.fds
+    - name: min
+      files:
+        - min.fds
+    - name: round
+      files:
+        - round.fds
+    - name: t2
+      files:
+        - t2.fds
+    - name: trim
+      files:
+        - trim.fds
+    - name: unique
+      files:
+        - unique.fds
+    - name: upper
+      files:
+        - upper.fds
+    - name: xb
+      files:
+        - xb.fds
+    - name: xyz
+      files:
+        - xyz.fds
