--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10']
         poetry-version: [1.1.13]
       fail-fast: false
 
@@ -16,7 +15,13 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.8'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.9'
+    - uses: actions/setup-python@v2
+      with:
+        python-version: '3.10'
     - run: pip install --user --upgrade nox
     - uses: abatilo/actions-poetry@v2.0.0
       with:
