--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,7 @@
 [mypy]
 ignore_missing_imports = True
+namespace_packages = True
+explicit_package_bases = True
 
 [mypy-freezegun.*]
 ignore_missing_imports = True
