--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,9 @@ extra:
       link: https://twitter.com/pbdtools
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/in/pbdtools
+  analytics:
+    provider: google
+    property: G-H988VDSB7C
 
 extra_css:
   - css/termynal.css
